[package]
edition = "2024"
name = "lurkr"
version = "0.4.0"

[dependencies]
hyper-util = { version = "0.1.16", features = ["tokio"] }
anyhow = "*"
env_logger = "*"
log = "*"
rand = { version = "0.9.1", features = ['thread_rng'] }
regex = "1.11.2"
rustls = "0.23.31"
rustls-pemfile = "2.2.0"
rustls-webpki = "0.103.4"
rustls-pki-types = "1.12.0"
serde = "*"
serde_derive = "*"
structopt = "*"
webpki = { version = "0.22.0", features = ["alloc"] }
tokio-rustls = "0.26.2"
rcgen = "0.14.3"
indexmap = "*"
http-body-util = { version = "0.1.3", features = ["full"] }

[dependencies.tokio]
features = ["full"]
version = "1.47.1"

[dependencies.hyper]
features = ["full"]
version = "1.7.0"

[dependencies.config]
features = ["preserve_order"]
version = "*"
