[package]
edition = "2024"
name = "lurkr"
version = "0.4.3"

[[bin]]
name = "lurkr"
path = "./src/bin/main.rs"

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
futures = "0.3.32"
http-body-util = { version = "0.1.3", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
indexmap = "*"
log = "0.4.33"
rand = { version = "0.10.1", features = ['thread_rng'] }
rcgen = "0.14.8"
regex = "1.12.4"
rustls = "0.23.41"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.14.1"
rustls-webpki = "0.103.13"
serde = "1.0.228"
serde_derive = "1.0.228"
structopt = "0.3.26"
tokio-rustls = "0.26.4"
tracing = "0.1.44"
tracing-attributes = "0.1.31"
tracing-subscriber = "0.3.23"
webpki = { version = "0.22.4", features = ["alloc"] }

[dependencies.tokio]
features = ["full"]
version = "1.52.3"

[dependencies.hyper]
features = ["full"]
version = "1.10.1"

[dependencies.config]
features = ["preserve_order"]
version = "0.15.24"
